fix: increase navbar logo height to 64px so stamp detail is visible

--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -3,13 +3,8 @@ body {
       ADD YOUR CUSTOM STYLING HERE. (INSIDE THE body {...} section.)
       IT WILL TAKE PRECEDENCE OVER THE STYLING IN THE STYLE.CSS FILE.
    ***/
-    //  background-color: white;
-    //  .content {
-    //   font-size: 14px;
-    //  }
-    //  h1 {
-    //   color: black;
-    //  }
+    --dg-logo-height: 64px;
+    --dg-logo-height-mobile: 48px;
 }
 
 @media (max-width: 768px) {
